--- a/package.json
+++ b/package.json
@@ -24,6 +24,30 @@
   "scripts": {
     "start": "node .",
     "dev": "nodemon .",
-    "compile": "tsc -p"
+    "compile": "tsc -p .",
+    "test": "jest --watch --notify",
+    "watch": "tsc -w"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "devDependencies": {
+    "@types/jest": "^22.2.2",
+    "@types/supertest": "^2.0.4",
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.3",
+    "supertest": "^3.0.0",
+    "ts-jest": "^22.4.2"
   }
 }
