--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,8 +29,7 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ],
   "typeRoots": [
     "@typesCustom",
