--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-router": "^7.4.0",
     "pg": "^7.4.1",
     "routing-controllers": "^0.7.7",
+    "superagent": "^3.8.2",
     "typeorm": "^0.1.20",
     "typescript": "^2.8.1"
   },
@@ -26,6 +27,7 @@
     "dev": "nodemon .",
     "compile": "tsc -p .",
     "test": "jest --watch --notify",
+    "seed": "node target/seed.js",
     "watch": "tsc -w"
   },
   "jest": {
